<?xml version="1.0"?>
<package format="2">
  <name>tensorflow_superpoint</name>
  <version>1.3.0</version>
  <description>A test package for checking if tensorflow_ros_cpp works correctly.</description>

  <maintainer email="martin.pecka@cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tensorflow_ros_cpp</depend>

  <test_depend>rosunit</test_depend>
</package>
